# IMproxyble

./: Cargo.toml
src/: main.rs
src/config_processor/: config_model.rs  file_op.rs  mod.rs
src/custom_macros/: helper_macros.rs  mod.rs
src/enums/: enums.rs
src/master/: master_process.rs  mod.rs
src/worker/: mod.rs  worker_process.rs
static/: improxyble_config.yml
